kubernetes/core/traefik-google-oauth/13-oauth-middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: google-oauth
spec:
  forwardAuth:
    address: http://traefik-forward-auth-service
    authResponseHeaders:
      - X-Forwarded-User
    tls:
      insecureSkipVerify: true
