kubernetes/core/traefik-google-oauth/30-app-whoami-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: whoami
  labels:
    app: whoami
spec:
  replicas: 2
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
      - name: whoami
        image: containous/whoami
        ports:
          - name: web
            containerPort: 80
      restartPolicy: Always
