kubernetes/core/traefik-google-oauth/03-traefik-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-service
spec:
  type: NodePort
  ports:
    - protocol: TCP
      name: web
      port: 8000
      nodePort: 30101
    - protocol: TCP
      name: websecure
      port: 4443
      nodePort: 30103
  selector:
    app: traefik
