kubernetes/core/traefik-google-oauth/31-app-whoami-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami-service
spec:
  ports:
    - protocol: TCP
      name: web
      port: 80
  selector:
    app: whoami
