kubernetes/core/traefik-google-oauth/21-traefik-admin-ingress-optional.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-admin-ingress-web
  namespace: default
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`admin.<EXAMPLE.COM>`)
    kind: Rule
    middlewares:
    - name: redirect
    services:
    - name: traefik-admin-service
      port: 8080
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-admin-ingress-websecure
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`admin.<EXAMPLE.COM>`)
    kind: Rule
    middlewares:
    - name: google-oauth
    services:
    - name: traefik-admin-service
      port: 8080
  tls:
    certResolver: default
    options:
      name: mintls12
      namespace: default
